Updated email reference and compiled projects

--- a/music.html
+++ b/music.html
@@ -120,8 +120,7 @@
 									<ul>
 										<li><a href="/index">Home</a></li>
 										<li><a href="/about_me">About Me</a></li>
-										<li><a href="/audio_program">Audio Programs</a></li>
-										<li><a href="/data">Data Visualizations</a></li>
+										<li><a href="/projects">Programming Projects</a></li>
 										<li><a href="/music">Music Production</a></li>
 										<!-- <li><a href="#">Current Projects</a></li> -->
 										<li><a href="#">Miscellaneous</a></li>
@@ -152,8 +151,8 @@
 									collaborate with so if you're interested,
 									please get in touch!</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">lankaraniamir@gmail.com</a>
-										<a href="#">al3625@columbia.edu</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto:lankaraniamir@gmail.com">lankaraniamir@gmail.com</a>
+										<a href="mailto:al3625@columbia.edu">al3625@columbia.edu</a></li>
 										<li class="icon solid fa-phone">(316) 990-3550</li>
 										<!-- <li class="icon solid fa-home">1234 Somewhere Road #8254<br />
 										Nashville, TN 00000-0000</li> -->
