--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Amir Lankarani - Audio Programs</title>
+		<title>Amir Lankarani - Programming Projects</title>
 		<meta charset="utf-8" />
 		<meta name="description" content="Amir Lankarani is a software engineer
 		and music producer with a focus on creating innovative interactions
@@ -39,7 +39,7 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Audio Projects</h1>
+										<h1>Programming Projects</h1>
 									</header>
 
 									<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
@@ -101,6 +101,22 @@
 											</ul>
 										</article>
 
+										<article>
+											<a href="https://observablehq.com/d/a06a846b2054ccb1" class="image"><img src="images/projects/vis_sum.png" alt="" /></a>
+											<h3>Visualizing Finidng Sums in an Aarray</h3>
+											<p>
+                                            Created dynamic visualizations of the nature
+                                            and efficacy of the various methods
+                                            to find all pairs and triples in an
+                                            array that sum to a
+                                            value. Created graphic comparing
+                                            time and operations for each type of
+                                            algorithm.
+                                            </p>
+											<ul class="actions">
+												<li><a href="https://observablehq.com/d/a06a846b2054ccb1" class="button">View</a></li>
+											</ul>
+										</article>
 
 										<article>
 											<a href="https://github.com/lankaraniamir/spotify-artist-extractor" class="image"><img src="images/projects/spotify_scraper.png" alt="" /></a>
@@ -116,6 +132,18 @@
 											small amount of time.</p>
 											<ul class="actions">
 												<li><a href="https://github.com/lankaraniamir/spotify-artist-extractor" class="button">View</a></li>
+											</ul>
+										</article>
+
+                                        <article>
+											<a href="https://observablehq.com/@amir-lankarani/nyc-covid-19-exploratory-visual" class="image"><img src="images/projects/covid_vis.png" alt="" /></a>
+											<h3>NYC Covid-19 Exploratory Visual</h3>
+											<p>A simple but powerful tool to
+											compmare Covid-19 stats amongst the
+											five boroughs of NYC relative to
+                                            major events during this time.</p>
+											<ul class="actions">
+												<li><a href="https://observablehq.com/@amir-lankarani/nyc-covid-19-exploratory-visual" class="button">View</a></li>
 											</ul>
 										</article>
 
