Fixed unincluded project

--- a/audio_program.html
+++ b/audio_program.html
@@ -146,7 +146,7 @@
 										<li><a href="/projects">Programming Projects</a></li>
 										<li><a href="/music">Music Production</a></li>
 										<!-- <li><a href="#">Current Projects</a></li> -->
-										<li><a href="#">Miscellaneous</a></li>
+										<!-- <li><a href="#">Miscellaneous</a></li> -->
 
 										<!-- <li>
 											<span class="opener">Submenu</span>
