--- a/data.html
+++ b/data.html
@@ -60,6 +60,17 @@
 										</article>
 
 										<article>
+											<a href="#" class="image"><img src="images/projects/mandala_clock.png" alt="" /></a>
+											<h3>Mandala Clock</h3>
+											<p>Designed an abstract mandala
+											generator made that constantly changes form using the current second, minute, hour, and
+											day</p>
+											<ul class="actions">
+												<li><a href="https://github.com/lankaraniamir/mandala-clock" class="button">View</a></li>
+											</ul>
+										</article>
+
+										<article>
 											<a href="https://observablehq.com/d/a06a846b2054ccb1" class="image"><img src="images/projects/vis_sum.png" alt="" /></a>
 											<h3>Visualizing Finidng Sums in an Aarray</h3>
 											<p>
