--- a/index.html
+++ b/index.html
@@ -188,14 +188,13 @@
                                 <ul class="actions">
                                     <li><a
                                     href="/music"
-                                    class="button primary">Listen to My Music Production
+                                    class="button primary">Listen to My Music
                                     </a></li>
                                 </ul>
                                 <ul class="actions">
                                     <li><a
                                     href="/projects"
-                                    class="button primary">Explore All
-                                    Programming Projects
+                                    class="button primary">Explore All Projects
                                     </a></li>
                                 </ul>
                                 <ul class="actions">
