--- a/projects.html
+++ b/projects.html
@@ -70,6 +70,17 @@
 											</ul>
 										</article>
 
+										<article>
+											<a href="#" class="image"><img src="images/projects/mandala_clock.png" alt="" /></a>
+											<h3>Mandala Clock</h3>
+											<p>Designed an abstract mandala
+											generator made that constantly changes form using the current second, minute, hour, and
+											day</p>
+											<ul class="actions">
+												<li><a href="https://github.com/lankaraniamir/mandala-clock" class="button">View</a></li>
+											</ul>
+										</article>
+
                                         <article>
 											<a href="#" class="image"><img src="images/projects/auto_remix.png" alt="" /></a>
 											<!-- <img src="images/projects/auto_remix.png" alt="" /></a> -->
@@ -174,7 +185,7 @@
 										<li><a href="/projects">Programming Projects</a></li>
 										<li><a href="/music">Music Production</a></li>
 										<!-- <li><a href="#">Current Projects</a></li> -->
-										<li><a href="#">Miscellaneous</a></li>
+										<!-- <li><a href="#">Miscellaneous</a></li> -->
 
 										<!-- <li>
 											<span class="opener">Submenu</span>
