Fixed verb mistake in index.html

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 											<a href="#" class="image"><img src="images/projects/mandala_clock.png" alt="" /></a>
 											<h3>Mandala Clock</h3>
 											<p>Designed an abstract mandala
-											generator made that constantly changes form using the current second, minute, hour, and
+											generator that constantly changes form using the current second, minute, hour, and
 											day</p>
 											<ul class="actions">
 												<li><a href="https://github.com/lankaraniamir/mandala-clock" class="button">View</a></li>
