--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 											<!-- <p>Blending Art & Algorithms -->
 										</header>
 										<p>
-                                        a versatile software engineer who
+                                        I'm a versatile software engineer who
                                         thrives on blending creative expression
                                         with cutting-edge technology to
                                         craft immersive multimedia experiences.
