Update index.html to use new song instead

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 											<ul class="actions">
 												<!-- <li><a href="https://github.com/lankaraniamir/music-library-db-web-interface" class="button">View</a></li> -->
                                                 <audio controls>
-                                                    <source src="audio/auto_remix.wav" type="audio/wav">
+                                                    <source src="audio/auto_remix_new.wav" type="audio/wav">
                                                     Your browser does not support the audio element.
                                                 </audio>
 											</ul>
