--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
                                         deep understanding of the music
                                         production process in order to reshape
                                         how we engage with audio in all forms of
-                                        digital media.
+                                        digital media. As a musician with an 
+					atypical background, I'm interested in making
+					tools that allow the production and consumption
+					of audio to be more accessible to a diverse array
+					of everyday listeners.
 										</p>
 										<ul class="actions">
 											<li><a href="/about_me" class="button big">Learn More</a></li>
