Update index.html motivation

--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@
                                         production process in order to reshape
                                         how we engage with audio in all forms of
                                         digital media. As a musician with an 
-					atypical background, I'm interested in making
-					tools that allow the production and consumption
-					of audio to be more accessible to a diverse array
-					of everyday listeners.
+					atypical background, I hope to code programs
+					that make audio accessible to a diverse array
+					of people in novel ways.
 										</p>
 										<ul class="actions">
 											<li><a href="/about_me" class="button big">Learn More</a></li>
