Rearrange homepage to be more generalizable

--- a/index.html
+++ b/index.html
@@ -48,16 +48,14 @@
                                         I'm a versatile software engineer who
                                         thrives on blending creative expression
                                         with cutting-edge technology to
-                                        craft immersive multimedia experiences.
+                                        craft immersive multimedia visualization experiences.
                                         In particular, I specialize in
-                                        combining advanced audio programming
-                                        concepts like acoustic modeling with a
-                                        deep understanding of the music
-                                        production process in order to reshape
-                                        how we engage with audio in all forms of
-                                        digital media. As a musician with an 
-					atypical background, I hope to code programs
-					that make audio accessible to a diverse array
+                                        combining advanced programming
+                                        concepts with a
+                                        deep understanding of visualization methods in order to reshape
+                                        how we engage with all forms of
+                                        digital media. My fundamental goal is to code programs
+					that can discover new ideas and make them accessible to a diverse array
 					of people in novel ways.
 										</p>
 										<ul class="actions">
@@ -75,14 +73,17 @@
 										<h2>What I Do</h2>
 									</header>
 									<div class="features">
-										<article>
-											<!-- <span class="icon fa-gem"></span> -->
-											<span class="icon solid fa-compact-disc"></span>
+									<article>
+											<!-- <span class="icon solid fa-rocket"></span> -->
+											<span class="icon solid fa-table"></span>
 											<div class="content">
-												<h3>Audio Programming</h3>
-												<p>Unleashing the potential of code to craft captivating auditory experiences. Whether it's autonomous audio synthesis or
-                                                real-time audio-visual interaction systems, I leverage my technical prowess to design immersive sonic landscapes that
-                                                amplify user engagement and elevate multimedia content.</p>
+												<h3>Data Visualization</h3>
+												<p>
+                                                Transforming complex data into compelling visual narratives. 
+						By combining data analysis with design aesthetics, I distill
+						intricate information into accessible and impactful forms that 
+						unveil insights, drive informed decision-making, and enhance the storytelling potential of multimedia projects.
+                                                </p>
 											</div>
 										</article>
 										<article>
@@ -93,6 +94,16 @@
 												<p>Leveraging the power of machine learning algorithms to unravel intricate patterns within complex data sets. From
                                                 predictive modeling to natural language processing, I channel my expertise to develop intelligent solutions that unlock
                                                 new insights, enhancing decision-making and user experiences across various applications.</p>
+											</div>
+										</article>
+										<article>
+											<!-- <span class="icon fa-gem"></span> -->
+											<span class="icon solid fa-compact-disc"></span>
+											<div class="content">
+												<h3>Audio Programming</h3>
+												<p>Unleashing the potential of code to craft captivating auditory experiences. Whether it's autonomous audio synthesis or
+                                                real-time audio-visual interaction systems, I leverage my technical prowess to design immersive sonic landscapes that
+                                                amplify user engagement and elevate multimedia content.</p>
 											</div>
 										</article>
 										<article>
@@ -109,16 +120,6 @@
                                             captivates listeners. My background extends from ambient compositions to hip-hop beats, allowing me to infuse
                                             diverse styles into multimedia projects, enriching their storytelling and ambiance.</p>
 
-											</div>
-										</article>
-										<article>
-											<!-- <span class="icon solid fa-rocket"></span> -->
-											<span class="icon solid fa-table"></span>
-											<div class="content">
-												<h3>Data Visualization</h3>
-												<p>
-                                                Transforming complex data into compelling visual narratives. By combining data analysis with design aesthetics, I distill intricate information into accessible and impactful forms that unveil insights, drive informed decision-making, and enhance the storytelling potential of multimedia projects.
-                                                </p>
 											</div>
 										</article>
 									</div>
