Remove extra word from index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                         I'm a versatile software engineer who
                                         thrives on blending creative expression
                                         with cutting-edge technology to
-                                        craft immersive multimedia visualization experiences.
+                                        craft immersive multimedia experiences.
                                         In particular, I specialize in
                                         combining advanced programming
                                         concepts with a
