Fix typo in projects.html

--- a/projects.html
+++ b/projects.html
@@ -150,7 +150,7 @@
 											<a href="https://observablehq.com/@amir-lankarani/nyc-covid-19-exploratory-visual" class="image"><img src="images/projects/covid_vis.png" alt="" /></a>
 											<h3>NYC Covid-19 Exploratory Visual</h3>
 											<p>A simple but powerful tool to
-											compmare Covid-19 stats amongst the
+											compare Covid-19 stats amongst the
 											five boroughs of NYC relative to
                                             major events during this time.</p>
 											<ul class="actions">
