Fixed broken links in projects.html

--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@
 										</article>
 
 										<article>
-											<a href="#" class="image"><img src="images/projects/mandala_clock.png" alt="" /></a>
+											<a href="https://github.com/lankaraniamir/mandala-clock" class="image"><img src="images/projects/mandala_clock.png" alt="" /></a>
 											<h3>Mandala Clock</h3>
 											<p>Designed an abstract mandala
 											generator made that constantly changes form using the current second, minute, hour, and
@@ -131,7 +131,7 @@
 										
 										<article>
 											<a href="https://observablehq.com/d/a06a846b2054ccb1" class="image"><img src="images/projects/vis_sum.png" alt="" /></a>
-											<h3>Visualizing Finidng Sums in an Aarray</h3>
+											<h3>Visualizing Finding Sums in an Aarray</h3>
 											<p>
                                             Created dynamic visualizations of the nature
                                             and efficacy of the various methods
