Fixed broken link in index.html

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 										</article>
 
 										<article>
-											<a href="#" class="image"><img src="images/projects/mandala_clock.png" alt="" /></a>
+											<a href="https://github.com/lankaraniamir/mandala-clock" class="image"><img src="images/projects/mandala_clock.png" alt="" /></a>
 											<h3>Mandala Clock</h3>
 											<p>Designed an abstract mandala
 											generator that constantly changes form using the current second, minute, hour, and
