Small improvements to homepage language and both songs linked in projects

--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
 											<!-- <p>Blending Art & Algorithms -->
 										</header>
 										<p>
-I'm a creative programmer, aspiring artist, and unapologetic media consumer obsessed with creating works that explore various cultures in new ways. 
-In particular, I specialize in creating digital media applications through a multimodal approach blending 
-an analytical understanding of such media with the usage of advanced programming concepts in machine learning and data processing. 
-Currently, I am a backend engineer at Graphiant where I design the systems underlying various edge computing centers. 
-In my spare time, I am working on releasing my first game and music project.
+I'm a creative programmer, aspiring artist, and unapologetic media consumer obsessed with creating works that explore the world in new ways. 
+In particular, I specialize in working with digital media through a multimodal approach based upon my technical background in machine learning and data processing. 
+Currently, I am a backend engineer at Graphiant where I design the data systems underlying our edge computing centers. 
+In my spare time, I am working on releasing a roguelite game and a instrumental rap album by the end of the year.
 										</p>
 										<ul class="actions">
 											<li><a href="/about_me" class="button big">Learn More</a></li>
@@ -71,7 +70,7 @@ In my spare time, I am working on releasing my first game and music project.
 											<span class="icon solid fa-table"></span>
 											<div class="content">
 												<h3>Data Processing</h3>
-												<p>Transforming complex sysystems into compelling visual narratives. 
+												<p>Transforming complex systems into compelling visual narratives. 
 						Through a comprehensive background in data storage, analysis, and visualization, I distill intricate information into accessible and impactful forms,  
 						enhancing the storytelling potential of projects.</p>
 											</div>
@@ -81,8 +80,9 @@ In my spare time, I am working on releasing my first game and music project.
 											<span class="icon solid fa-compact-disc"></span>
 											<div class="content">
 												<h3>Audio Programming</h3>
-												<p>Coding captivating auditory experiences. Whether it's autonomous audio synthesis or
-                                                real-time audio-visual systems, I leverage my background in music production to design tools that allow multimedia projects to engage with their audio in new ways</p>
+												<p>Coding captivating auditory experiences. 
+Whether it's autonomous audio synthesis or
+                                                real-time audio-visual systems, I leverage my background in music production and audio language processing to design tools that allow users to engage with audio in new ways</p>
 											</div>
 										</article>
 										<article>
@@ -155,11 +155,18 @@ Having projects ranging from game design to audiovisual experimentation to gener
                                         <article>
 											<a href="#" class="image"><img src="images/projects/auto_remix.png" alt="" /></a>
 											<h3>Music Library Auto-Remixer</h3>
-											<p>Example song made by my auto-remixing program which decomposes all songs in a music library into their stems using a
+											<p>Example songs made by my auto-remixing program which decomposes all songs in a music library into their stems using a
                                             source separation model. It then repeatedly chooses four stems at random that it warps to match in tempo, pitch, and
                                             onset position creating a cohesive output song.</p>
 											<ul class="actions">
 												<!-- <li><a href="https://github.com/lankaraniamir/music-library-db-web-interface" class="button">View</a></li> -->
+                                                <audio controls>
+                                                    <source src="audio/auto_remix.wav" type="audio/wav">
+                                                    Your browser does not support the audio element.
+                                                </audio>
+											</ul>
+																	<ul class="actions">
+						<!-- <li><a href="https://github.com/lankaraniamir/music-library-db-web-interface" class="button">View</a></li> -->
                                                 <audio controls>
                                                     <source src="audio/auto_remix_new.wav" type="audio/wav">
                                                     Your browser does not support the audio element.
