Update about_me.html to remove probe to join organization

--- a/about_me.html
+++ b/about_me.html
@@ -9,8 +9,7 @@
 		<title>Amir Lankarani - About Me</title>
 		<meta charset="utf-8" />
 		<meta name="description" content="Amir Lankarani is a software engineer
-		and music producer with a focus on creating innovative interactions
-        of audio with other forms of media" />
+		and music producer with a focus on creating innovative interactions of audio with other forms of media" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
@@ -53,7 +52,7 @@
                                     I am driven by the fusion of computer
                                     science and creative expression, constantly seeking innovative solutions that redefine the way we interact with media.
                                     My expertise lies at the intersection of machine learning, data visualization, and artificial intelligence in the
-                                    context of audio, games, and language.
+                                    context of audio, games, and natural language.
                                     </p>
 
 									<p>
@@ -71,13 +70,6 @@
                                     programming and art in all its modalities. I am thrilled to bring my creative skills and technical expertise together to
                                     develop innovative multimedia experiences that captivate audiences and reshape the way people engage with content.
                                     </p>
-
-									<p>
-                                    I am eager to contribute to organizations that share the goal of merging technology and creativity for the greater good.
-                                    If you are interested, let's connect and explore opportunities to collaborate on exciting projects. Together, we can
-                                    create immersive experiences that engage and delight users and audiences worldwide.
-                                    </p>
-
 								</section>
 
 						</div>
