Removed remix project frome homepage

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ Having projects ranging from game design to audiovisual experimentation to gener
 										<h2>Recent Projects</h2>
 									</header>
 									<div class="posts">
+										
 										<article>
 											<a href="https://observablehq.com/@amir-lankarani/on-off-the-air" class="image"><img src="images/projects/on_off_the_air.png" alt="" /></a>
 											<h3>On "Off the Air"</h3>
@@ -140,6 +141,40 @@ Having projects ranging from game design to audiovisual experimentation to gener
 												<li><a href="https://github.com/lankaraniamir/lyric_source_separation" class="button">View</a></li>
 											</ul>
 										</article>
+										
+										<article>
+											<a href="https://github.com/lankaraniamir/spotify-artist-extractor" class="image"><img src="images/projects/spotify_scraper.png" alt="" /></a>
+											<h3>Spotify Artist Extractor</h3>
+											<p>Created a high-performance script
+											that facilitates async calls within
+											a multiprocessing framework to
+											simulate an active music listener,
+											allowing Spotify's API rate-limiting
+											to be bypassed. This resulted in
+											being able to extract almost all artists on
+											Spotify (over 13 million) in a very
+											small amount of time.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/lankaraniamir/spotify-artist-extractor" class="button">View</a></li>
+											</ul>
+										</article>
+
+										<article>
+											<a href="https://github.com/lankaraniamir/spotify-artist-extractor" class="image"><img src="images/projects/spotify_scraper.png" alt="" /></a>
+											<h3>Spotify Artist Extractor</h3>
+											<p>Created a high-performance script
+											that facilitates async calls within
+											a multiprocessing framework to
+											simulate an active music listener,
+											allowing Spotify's API rate-limiting
+											to be bypassed. This resulted in
+											being able to extract almost all artists on
+											Spotify (over 13 million) in a very
+											small amount of time.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/lankaraniamir/spotify-artist-extractor" class="button">View</a></li>
+											</ul>
+										</article>
 
 										<article>
 											<a href="https://github.com/lankaraniamir/mandala-clock" class="image"><img src="images/projects/mandala_clock.png" alt="" /></a>
@@ -151,29 +186,6 @@ Having projects ranging from game design to audiovisual experimentation to gener
 												<li><a href="https://github.com/lankaraniamir/mandala-clock" class="button">View</a></li>
 											</ul>
 										</article>
-
-                                        <article>
-											<a href="#" class="image"><img src="images/projects/auto_remix.png" alt="" /></a>
-											<h3>Music Library Auto-Remixer</h3>
-											<p>Example songs made by my auto-remixing program which decomposes all songs in a music library into their stems using a
-                                            source separation model. It then repeatedly chooses four stems at random that it warps to match in tempo, pitch, and
-                                            onset position creating a cohesive output song.</p>
-											<ul class="actions">
-												<!-- <li><a href="https://github.com/lankaraniamir/music-library-db-web-interface" class="button">View</a></li> -->
-                                                <audio controls>
-                                                    <source src="audio/auto_remix.wav" type="audio/wav">
-                                                    Your browser does not support the audio element.
-                                                </audio>
-											</ul>
-																	<ul class="actions">
-						<!-- <li><a href="https://github.com/lankaraniamir/music-library-db-web-interface" class="button">View</a></li> -->
-                                                <audio controls>
-                                                    <source src="audio/auto_remix_new.wav" type="audio/wav">
-                                                    Your browser does not support the audio element.
-                                                </audio>
-											</ul>
-										</article>
-
 									</div>
 								</section>
 
