Update projects.html to have multiple songs for remix and new homepage order

--- a/projects.html
+++ b/projects.html
@@ -71,48 +71,6 @@
 										</article>
 
 										<article>
-											<a href="https://github.com/lankaraniamir/mandala-clock" class="image"><img src="images/projects/mandala_clock.png" alt="" /></a>
-											<h3>Mandala Clock</h3>
-											<p>Designed an abstract mandala
-											generator made that constantly changes form using the current second, minute, hour, and
-											day</p>
-											<ul class="actions">
-												<li><a href="https://github.com/lankaraniamir/mandala-clock" class="button">View</a></li>
-											</ul>
-										</article>
-
-                                        <article>
-											<a href="#" class="image"><img src="images/projects/auto_remix.png" alt="" /></a>
-											<!-- <img src="images/projects/auto_remix.png" alt="" /></a> -->
-											<!-- <img src="images/projects/auto_remix.png" -->
-											<!-- alt="" /></a> -->
-											<h3>Music Library Auto-Remixer</h3>
-											<p>Example song made by my auto-remixing program which decomposes all songs in a music library into their stems using a
-                                            source separation model. It then repeatedly chooses four stems at random that it warps to match in tempo, pitch, and
-                                            onset position creating a cohesive output song.</p>
-											<ul class="actions">
-												<!-- <li><a href="https://github.com/lankaraniamir/music-library-db-web-interface" class="button">View</a></li> -->
-                                                <audio controls>
-                                                    <source src="audio/auto_remix_new.wav" type="audio/wav">
-                                                    Your browser does not support the audio element.
-                                                </audio>
-											</ul>
-										</article>
-
-										<article>
-											<a href="https://github.com/lankaraniamir/music-library-db-web-interface" class="image"><img src="images/projects/music_db.png" alt="" /></a>
-											<h3>Music Library Database & Web Interface</h3>
-											<p>Created a PostgreSQL database and a
-											corresponding Flask web interface to
-											store music library data dynamically
-											with multiple linked
-                                            versions of songs</p>
-											<ul class="actions">
-												<li><a href="https://github.com/lankaraniamir/music-library-db-web-interface" class="button">View</a></li>
-											</ul>
-										</article>
-
-										<article>
 											<a href="https://github.com/lankaraniamir/spotify-artist-extractor" class="image"><img src="images/projects/spotify_scraper.png" alt="" /></a>
 											<h3>Spotify Artist Extractor</h3>
 											<p>Created a high-performance script
@@ -128,6 +86,56 @@
 												<li><a href="https://github.com/lankaraniamir/spotify-artist-extractor" class="button">View</a></li>
 											</ul>
 										</article>
+
+										<article>
+											<a href="https://github.com/lankaraniamir/mandala-clock" class="image"><img src="images/projects/mandala_clock.png" alt="" /></a>
+											<h3>Mandala Clock</h3>
+											<p>Designed an abstract mandala
+											generator that constantly changes form using the current second, minute, hour, and
+											day</p>
+											<ul class="actions">
+											otay o	<li><a href="https://github.com/lankaraniamir/mandala-clock" class="button">View</a></li>
+											</ul>
+										</article>
+
+									        <article>
+											<a href="#" class="image"><img src="images/projects/auto_remix.png" alt="" /></a>
+											<!-- <img src="images/projects/auto_remix.png" alt="" /></a> -->
+											<!-- <img src="images/projects/auto_remix.png" -->
+											<!-- alt="" /></a> -->
+											<h3>Music Library Auto-Remixer</h3>
+											<p>Example song made by my auto-remixing program which decomposes all songs in a music library into their stems using a
+                                            source separation model. It then repeatedly chooses four stems at random that it warps to match in tempo, pitch, and
+                                            onset position creating a cohesive output song.</p>
+						<ul class="actions">
+							<!-- <li><a href="https://github.com/lankaraniamir/music-library-db-web-interface" class="button">View</a></li> -->
+	                                                <audio controls>
+	                                                    <source src="audio/auto_remix_new.wav" type="audio/wav">
+	                                                    Your browser does not support the audio element.
+							</audio>
+						</ul>
+						<ul class="actions">
+							<!-- <li><a href="https://github.com/lankaraniamir/music-library-db-web-interface" class="button">View</a></li> -->
+							<audio controls>
+							    <source src="audio/auto_remix_new.wav" type="audio/wav">
+							    Your browser does not support the audio element.
+                                                	</audio>
+						</ul>
+										</article>
+
+										<article>
+											<a href="https://github.com/lankaraniamir/music-library-db-web-interface" class="image"><img src="images/projects/music_db.png" alt="" /></a>
+											<h3>Music Library Database & Web Interface</h3>
+											<p>Created a PostgreSQL database and a
+											corresponding Flask web interface to
+											store music library data dynamically
+											with multiple linked
+                                            versions of songs</p>
+											<ul class="actions">
+												<li><a href="https://github.com/lankaraniamir/music-library-db-web-interface" class="button">View</a></li>
+											</ul>
+										</article>
+
 										
 										<article>
 											<a href="https://observablehq.com/d/a06a846b2054ccb1" class="image"><img src="images/projects/vis_sum.png" alt="" /></a>
