Multiple songs in remix project sectoin

--- a/projects.html
+++ b/projects.html
@@ -104,13 +104,13 @@
 											<!-- <img src="images/projects/auto_remix.png" -->
 											<!-- alt="" /></a> -->
 											<h3>Music Library Auto-Remixer</h3>
-											<p>Example song made by my auto-remixing program which decomposes all songs in a music library into their stems using a
+											<p>Example songs made by my auto-remixing program which decomposes all songs in a music library into their stems using a
                                             source separation model. It then repeatedly chooses four stems at random that it warps to match in tempo, pitch, and
                                             onset position creating a cohesive output song.</p>
 						<ul class="actions">
 							<!-- <li><a href="https://github.com/lankaraniamir/music-library-db-web-interface" class="button">View</a></li> -->
 	                                                <audio controls>
-	                                                    <source src="audio/auto_remix_new.wav" type="audio/wav">
+	                                                    <source src="audio/auto_remix.wav" type="audio/wav">
 	                                                    Your browser does not support the audio element.
 							</audio>
 						</ul>
